# python_text2speech

./: .gitignore  README.md  text2speach.py
curriculo-rag-agent/: # How to Build a Scalable RAG System for  .dockerignore  Dockerfile  README.md  ingest_data.py  init_db.py  pyproject.toml
curriculo-rag-agent/alembic/: env.py
curriculo-rag-agent/alembic/versions/: 268bab833cfd_initial_care_saas_migration.py  b1c2d3e4f5a6_add_chat_sessions_and_messages.py
curriculo-rag-agent/app/: main.py
curriculo-rag-agent/app/api/: router.py
curriculo-rag-agent/app/core/: config.py  logging.py
curriculo-rag-agent/app/db/: session.py
curriculo-rag-agent/app/db/repositories/: chat_repo.py  knowledge_repo.py
curriculo-rag-agent/app/models/: care.py  chat.py  knowledge.py
curriculo-rag-agent/app/schemas/: api_models.py
curriculo-rag-agent/app/services/: agent_service.py  agent_tools.py  document_parser.py  rag_service.py
curriculo-rag-agent/data/: agentic_ai_coding.txt  ai_agents_overview.txt  rag_tutorial_simplilearn.txt  scalable_rag_kamradt.txt
curriculo-rag-agent/scripts/: seed_care_data.py  test_tools.py
curriculo-rag-agent/services/: docker-compose.yml
curriculo-rag-agent/web/: Dockerfile  package-lock.json  package.json
curriculo-rag-agent/web/src/app/: globals.css  page.tsx
curriculo-rag-agent/web/src/components/: Chat.tsx  Dashboard.tsx  Ingest.tsx
openclaw-vultr-deploy/openclaw-infra/ansible/: inventory.ini  playbook.yml
openclaw-vultr-deploy/openclaw-infra/terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate.backup  terraform.tfvars  variables.tf
(+1 files in other folders)
